# archivum

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  panda.config.ts  tsconfig.json
.github/workflows/: release.yml
docs/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  claude.rs  collections.rs  commands.rs  config.rs  db.rs  embeddings.rs  lib.rs  main.rs  ollama.rs  pipeline.rs  rerank.rs  storage.rs  whisper.rs
src/components/: AskDrawer.tsx  ChatPanel.tsx  QuickSearch.tsx  Sidebar.tsx
src/lib/: api.ts
src/pages/: Chat.tsx  DocumentView.tsx  Import.tsx  Library.tsx  Search.tsx  Settings.tsx
